compiler/typ/tests/fixtures/diagnostics/0004_core_annotated_value_mismatch_01.ml.infer.expected
File "0004_core_annotated_value_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0004_core_annotated_value_mismatch_01 is not a valid module name.

File "0004_core_annotated_value_mismatch_01.ml", line 1, characters 18-23:
1 | let alpha : int = false
                      ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
